--- a/style.css
+++ b/style.css
@@ -1,8 +1,52 @@
-html, body {
-  margin: 0;
-  padding: 0;
+body {
+  display: flex;
+  width: 100vw;
+  /* flex-direction: column; */
+  justify-content: center;
+  position: relative;
+  gap: 10px;
+  height: auto;
+  background-color: #E2E4F6;
+  color: #DEFFFC;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#sidebar {
+  margin-right: 20px;
+}
+
+header{
+  position: absolute;
+  top: 0
+}
+
+#user-tools{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: sticky;
+  top: 30px;
+  padding: 30px;
+  background-color: #001F54;
+  border-radius: 30px;
+}
+
+#sliders{
+  display: flex;
+  flex-direction: column;
+}
+
+#imgCanvas{
+  align-self: end;
 }
 
 canvas {
   display: block;
+}
+
+button{
+  padding: 5px;
+  background-color: #DEFFFC;
+  border-radius: 15px;
+  border: none;
 }
